--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "actions-on-google": "^2.5.0",
         "axios": "^0.18.0",
+        "body-parser": "^1.18.3",
         "cheerio": "^1.0.0-rc.2",
         "express": "^4.16.4"
     }
