--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "axios": "^0.18.0",
         "body-parser": "^1.18.3",
         "cheerio": "^1.0.0-rc.2",
-        "express": "^4.16.4"
+        "express": "^4.16.4",
+        "i18n": "^0.8.3"
     }
 }
